package Garage;

public class Empleado {
    private String idEmpleado;
    private String Cargo;


    public String getIdEmpleado() {
        return idEmpleado;
    }
    public void setIdEmpleado(String idEmpleado) {
        this.idEmpleado = idEmpleado;
    }
    public String getCargo() {
        return Cargo;
    }
    public void setCargo(String cargo) {
        Cargo = cargo;
    }

    public void ToRegister() {
        return;
    }
    public void VerificarLogin() {
        return;
    }

}
